[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,23 @@
 <html>
+    <head>
+        <title>
+             artical one| ramya
+        </title>
+    </head>
+    <body>
+        <div>
+        <a href="/">home</a>
+        </div>
+        <div>
+            <p>
+                this is my first article in the web,this includes creation of the differnt url.
+            </p>
+              <p>
+                this is my first article in the web,this includes creation of the differnt url.
+            </p>
+              <p>
+                this is my first article in the web,this includes creation of the differnt url.
+            </p>
+        </div>
+    </body>
 </html>
